[gd_scene load_steps=4 format=3 uid="uid://ofmod5alpskp"]

[ext_resource type="Script" path="res://script/attack/beam_attack.gd" id="1_mmtg7"]
[ext_resource type="Texture2D" uid="uid://bgbo4lpgtf20l" path="res://img/piece/attack/beam_head.png" id="1_ykdm1"]
[ext_resource type="Texture2D" uid="uid://b07lmjswymvc0" path="res://img/piece/attack/beam_line.png" id="2_h68gg"]

[node name="BeamAttack" type="Node2D"]
script = ExtResource("1_mmtg7")

[node name="beam" type="Line2D" parent="."]
position = Vector2(9, 0)
points = PackedVector2Array(0, 0, 100, 0)
width = 9.0
texture = ExtResource("2_h68gg")
texture_mode = 2

[node name="start_point" type="Sprite2D" parent="."]
texture = ExtResource("1_ykdm1")

[node name="end_point" type="Sprite2D" parent="."]
position = Vector2(116, 0)
rotation = 3.14159
texture = ExtResource("1_ykdm1")
